--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,35 @@
                 android:layout_above="@+id/bottom_nav"
                 app:layout_constraintBottom_toTopOf="@id/bottom_nav"
                 app:layout_constraintTop_toBottomOf="@id/app_bar"
-                tools:layout_editor_absoluteX="-16dp"></FrameLayout>
+                />
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/floating_btn1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@id/floating_btn2"
+                app:layout_constraintEnd_toEndOf="@id/floating_btn2"
+                app:layout_constraintBottom_toBottomOf="@id/floating_btn2"
+                android:layout_margin="16dp"
+                android:contentDescription="post"
+                app:fabSize="mini"
+                app:backgroundTint="@color/white"
+                app:rippleColor="#000"
+                app:srcCompat="@drawable/ic_create"
+                android:visibility="invisible"/>
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/floating_btn2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/bottom_nav"
+                android:layout_margin="16dp"
+                android:contentDescription="add"
+                app:backgroundTint="@color/white"
+                app:rippleColor="#000"
+                app:srcCompat="@drawable/ic_add"
+                android:visibility="visible"/>
+
+
 
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/bottom_nav"
