--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,77 +6,23 @@
     <data>
         <variable
             name="main"
-            type="com.example.carretmarket.view.activity.MainActivity" />
+            type="com.example.carretmarket.viewmodel.MainViewModel" />
     </data>
-    <androidx.drawerlayout.widget.DrawerLayout
 
-        android:id="@+id/drawer_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".view.fragment.MainActivity">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <com.google.android.material.appbar.AppBarLayout
-                android:id="@+id/app_bar"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="#fff">
-                <androidx.appcompat.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:title=" "
-                    >
-                    <TextView
-                        android:id="@+id/tv_gujida"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="구지다"
-                        android:textSize="20sp"/>
-                </androidx.appcompat.widget.Toolbar>
-            </com.google.android.material.appbar.AppBarLayout>
-
+            <!--bottom_navigation_framelayout-->
             <FrameLayout
                 android:id="@+id/fragments_frame"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_above="@+id/bottom_nav"
                 app:layout_constraintBottom_toTopOf="@id/bottom_nav"
-                app:layout_constraintTop_toBottomOf="@id/app_bar"
+                app:layout_constraintTop_toTopOf="parent"
                 />
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/floating_btn1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="@id/floating_btn2"
-                app:layout_constraintEnd_toEndOf="@id/floating_btn2"
-                app:layout_constraintBottom_toBottomOf="@id/floating_btn2"
-                android:layout_margin="16dp"
-                android:contentDescription="post"
-                app:fabSize="mini"
-                app:backgroundTint="@color/white"
-                app:rippleColor="#000"
-                app:srcCompat="@drawable/ic_create"
-                android:visibility="invisible"/>
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/floating_btn2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/bottom_nav"
-                android:layout_margin="16dp"
-                android:contentDescription="add"
-                app:backgroundTint="@color/white"
-                app:rippleColor="#000"
-                app:srcCompat="@drawable/ic_add"
-                android:visibility="visible"/>
-
-
-
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/bottom_nav"
                 app:menu="@menu/menu_bottom_nav"
@@ -90,5 +36,4 @@
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.drawerlayout.widget.DrawerLayout>
 </layout>
