--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".view.activity.SignupActivity">
+
         <TextView
             android:id="@+id/tv_signup"
             android:layout_width="wrap_content"
@@ -23,12 +24,21 @@
             app:layout_constraintTop_toTopOf="parent"
             android:textSize="30sp"/>
         <EditText
-            android:id="@+id/et_inp_id"
+            android:id="@+id/et_inp_email"
             android:layout_width="300dp"
             android:layout_height="48dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_signup"
+            android:hint="이메일를 입력하세요"
+            android:text=""/>
+        <EditText
+            android:id="@+id/et_inp_id"
+            android:layout_width="300dp"
+            android:layout_height="48dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/et_inp_email"
             android:hint="아이디를 입력하세요"
             android:text=""/>
         <EditText
