--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,10 +13,9 @@
 
         <!--bottom_navigation_framelayout-->
         <FrameLayout
-            android:id="@+id/fragments_frame"
+            android:id="@+id/fl_main"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_above="@+id/bottom_nav"
             app:layout_constraintBottom_toTopOf="@id/bottom_nav"
             app:layout_constraintTop_toTopOf="parent"
             />
@@ -27,7 +26,7 @@
             android:layout_height="wrap_content"
             android:background="#fff"
             app:itemIconSize="30dp"
-            app:layout_constraintTop_toBottomOf="@id/fragments_frame"
+            app:layout_constraintTop_toBottomOf="@id/fl_main"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
