--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    tools:context=".view.fragment.SignInFragment">
     <data>
         <variable
-            name="start"
-            type="com.example.carretmarket.view.activity.StartActivity" />
+            name="signin"
+            type="com.example.carretmarket.viewmodel.SignInViewModel" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".view.activity.StartActivity">
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/tv_login"
@@ -23,23 +22,33 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:textSize="30sp"/>
+        <EditText
+            android:id="@+id/et_inp_id"
+            android:layout_width="300dp"
+            android:layout_height="48dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_login"
+            android:hint="아이디를 입력하세요"
+            android:text=""/>
+        <EditText
+            android:id="@+id/et_inp_pw"
+            android:layout_width="300dp"
+            android:layout_height="48dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/et_inp_id"
+            android:hint="비밀번호를 입력하세요"
+            android:text=""/>
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_login"
+            app:layout_constraintTop_toBottomOf="@id/et_inp_pw"
             android:text="로그인"
             />
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_signup"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btn_login"
-            android:text="회원가입"
-            />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
