--- a/app/src/main/res/layout/activity_posting.xml
+++ b/app/src/main/res/layout/activity_posting.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="posting"
-            type="com.example.carretmarket.viewmodel.InputViewModel" />
+            type="com.example.carretmarket.viewmodel.PostingViewModel" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
