--- a/app/src/main/res/layout/fragment_on_board.xml
+++ b/app/src/main/res/layout/fragment_on_board.xml
@@ -2,11 +2,11 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.fragment.OnBoardFragment">
+    tools:context=".features.auth.OnBoardFragment">
     <data>
         <variable
             name="onboard"
-            type="com.example.carretmarket.view.fragment.OnBoardFragment" />
+            type="com.example.carretmarket.features.auth.OnBoardFragment" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
