--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".view.fragment.ProfileFragment">
+    tools:context=".features.profile.ProfileFragment">
     <data>
         <variable
             name="profile"
-            type="com.example.carretmarket.view.fragment.ProfileFragment" />
+            type="com.example.carretmarket.features.profile.ProfileFragment" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
