--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -2,11 +2,11 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.fragment.SignInFragment">
+    tools:context=".features.auth.login.SignInFragment">
     <data>
         <variable
             name="signin"
-            type="com.example.carretmarket.viewmodel.SignInViewModel" />
+            type="com.example.carretmarket.features.auth.login.SignInViewModel" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
