--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -2,11 +2,11 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.fragment.SignUpFragment">
+    tools:context=".features.auth.join.SignUpFragment">
     <data>
         <variable
             name="signup"
-            type="com.example.carretmarket.viewmodel.SignUpViewModel" />
+            type="com.example.carretmarket.features.auth.join.SignUpViewModel" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
