--- a/app/src/main/res/layout/fragment_posting.xml
+++ b/app/src/main/res/layout/fragment_posting.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="vm"
-            type="com.example.carretmarket.features.board.post.PostingViewModel" />
+            type="com.example.carretmarket.features.onboard.post.PostingViewModel" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
