--- a/app/src/main/res/layout/fragment_chatting.xml
+++ b/app/src/main/res/layout/fragment_chatting.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".features.chat.ChatFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
-            name="chat"
-            type="com.example.carretmarket.features.chat.ChatFragment" />
+            name="vm"
+            type="com.example.carretmarket.features.chat.ChatViewModel" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -18,7 +16,4 @@
             android:layout_height="wrap_content">
         </androidx.recyclerview.widget.RecyclerView>
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
 </layout>
