--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".features.home.HomeFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
-            name="home"
+            name="vm"
             type="com.example.carretmarket.features.home.HomeViewModel" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
