--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".features.map.MapFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
-            name="map"
-            type="com.example.carretmarket.features.map.MapFragment" />
+            name="vm"
+            type="com.example.carretmarket.features.map.MapViewModel" />
     </data>
     <ScrollView
         android:layout_width="match_parent"
