--- a/app/src/main/res/layout/fragment_posting.xml
+++ b/app/src/main/res/layout/fragment_posting.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="vm"
-            type="com.example.carretmarket.features.onboard.post.PostingViewModel" />
+            type="com.example.carretmarket.features.board.post.PostingViewModel" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -28,7 +28,7 @@
             android:inputType="text"
             android:layout_width="0dp"
             android:layout_height="100dp"
-            android:text="@{vm.title}"
+            android:text="@={vm.title}"
             android:layout_marginHorizontal="20dp"
             android:elevation="5dp"
             android:backgroundTint="@android:color/transparent"
@@ -45,7 +45,7 @@
             android:id="@+id/ev_inp_content"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:text="@{vm.content}"
+            android:text="@={vm.content}"
             android:layout_marginHorizontal="20dp"
             android:elevation="5dp"
             android:backgroundTint="@android:color/transparent"
@@ -53,16 +53,15 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ev_inp_title"
             app:layout_constraintBottom_toTopOf="@id/btn_submit"/>
-        <View
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_submit"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="submit"
             android:textSize="10sp"
             android:onClick="@{()->vm.postContent()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:background="@color/black"
             android:layout_margin="20dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
