--- a/app/src/main/res/layout/list_chat.xml
+++ b/app/src/main/res/layout/list_chat.xml
@@ -4,8 +4,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
         <variable
-            name="list_chat"
-            type="com.example.carretmarket.features.chat.ChatAdapter" />
+            name="vm"
+            type="com.example.carretmarket.features.chat.ChatViewModel" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
