--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -2,15 +2,16 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".features.auth.login.SignInFragment">
+    tools:context=".features.onboard.signin.SignInFragment">
     <data>
         <variable
             name="vm"
-            type="com.example.carretmarket.features.auth.login.SignInViewModel" />
+            type="com.example.carretmarket.features.onboard.signin.SignInViewModel" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
         <TextView
             android:id="@+id/tv_login"
