--- a/presentation/src/main/res/layout/activity_on_main.xml
+++ b/presentation/src/main/res/layout/activity_on_main.xml
@@ -11,7 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <!--bottom_navigation_framelayout-->
         <androidx.fragment.app.FragmentContainerView
             android:name="com.example.carretmarket.features.home.HomeFragment"
             android:id="@+id/fl_main"
@@ -26,6 +25,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#fff"
+            app:itemIconTint="@color/base3"
+            app:itemTextColor="@color/base3"
             app:itemIconSize="30dp"
             app:layout_constraintTop_toBottomOf="@id/fl_main"
             app:layout_constraintStart_toStartOf="parent"
