--- a/presentation/src/main/res/layout/fragment_board.xml
+++ b/presentation/src/main/res/layout/fragment_board.xml
@@ -33,7 +33,7 @@
             android:layout_margin="16dp"
             android:contentDescription="post"
             app:fabSize="mini"
-            app:backgroundTint="@color/white"
+            app:backgroundTint="@color/base1"
             app:rippleColor="#000"
             app:srcCompat="@drawable/ic_create"
             android:visibility="invisible"/>
@@ -45,7 +45,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_margin="16dp"
             android:contentDescription="add"
-            app:backgroundTint="@color/white"
+            app:backgroundTint="@color/base1"
             app:rippleColor="#000"
             app:srcCompat="@drawable/ic_add"
             android:visibility="visible"/>
