--- a/presentation/src/main/res/layout/fragment_home.xml
+++ b/presentation/src/main/res/layout/fragment_home.xml
@@ -30,9 +30,11 @@
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.recyclerview.widget.RecyclerView
+            app:layout_constraintTop_toBottomOf="@id/app_bar"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:id="@+id/rv_items"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="0dp"/>
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/floating_btn1"
             android:layout_width="wrap_content"
@@ -43,7 +45,7 @@
             android:layout_margin="16dp"
             android:contentDescription="post"
             app:fabSize="mini"
-            app:backgroundTint="@color/white"
+            app:backgroundTint="@color/base1"
             app:rippleColor="#000"
             app:srcCompat="@drawable/ic_create"
             android:visibility="invisible"/>
@@ -55,7 +57,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_margin="16dp"
             android:contentDescription="add"
-            app:backgroundTint="@color/white"
+            app:backgroundTint="@color/base1"
             app:rippleColor="#000"
             app:srcCompat="@drawable/ic_add"
             android:visibility="visible"/>
