--- a/presentation/src/main/res/layout/fragment_posting.xml
+++ b/presentation/src/main/res/layout/fragment_posting.xml
@@ -10,59 +10,58 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <TextView
-            android:id="@+id/tv_post"
-            android:layout_width="wrap_content"
+
+        <EditText
+            android:id="@+id/ev_inp_title"
+            android:padding="20dp"
+            android:gravity="top"
+            android:hint="제목을 적어주세요"
+            android:inputType="text"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="50dp"
+            android:text="@={vm.title}"
+            android:fontFamily="@font/suite_boldextra"
+
+            android:background="@drawable/edit_text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/ev_inp_title"
-            android:text="post"
-            android:textSize="40sp"/>
-        <EditText
-            android:id="@+id/ev_inp_title"
-            android:padding="40dp"
-            android:gravity="top"
-            android:hint="title"
-            android:inputType="text"
-            android:layout_width="0dp"
-            android:layout_height="100dp"
-            android:text="@={vm.title}"
-            android:layout_marginHorizontal="20dp"
-            android:elevation="5dp"
-            android:backgroundTint="@android:color/transparent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_post"
             app:layout_constraintBottom_toTopOf="@id/ev_inp_content"/>
 
         <EditText
-            android:padding="40dp"
+            android:padding="20dp"
             android:gravity="top"
-            android:hint="content"
+            android:hint="오늘은 어떤 일이 일어나셨는지요?"
             android:inputType="text"
             android:id="@+id/ev_inp_content"
+            android:text="@={vm.content}"
+            android:fontFamily="@font/suite_boldextra"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:text="@={vm.content}"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="30dp"
             android:layout_marginHorizontal="20dp"
-            android:elevation="5dp"
-            android:backgroundTint="@android:color/transparent"
+            android:background="@drawable/edit_text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ev_inp_title"
             app:layout_constraintBottom_toTopOf="@id/btn_submit"/>
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_submit"
-            android:layout_width="wrap_content"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:text="submit"
-            android:textSize="10sp"
+            android:text="업로드"
+            android:fontFamily="@font/suite_boldextra"
+            android:textSize="20sp"
             android:onClick="@{()->vm.postContent()}"
+            android:background="@drawable/button"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_margin="20dp" />
+            android:layout_margin="20dp"
+            android:stateListAnimator="@null"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
