--- a/presentation/src/main/res/layout/fragment_sign_up_or_in.xml
+++ b/presentation/src/main/res/layout/fragment_sign_up_or_in.xml
@@ -15,31 +15,64 @@
             android:id="@+id/tv_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="로그인"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="70dp"
+            android:text="최고의 중고거래 어플리케이션"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:textSize="30sp"/>
+        <TextView
+            android:id="@+id/tv_good"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="80dp"
+            android:text="지대좋다~"
+            android:rotation="10"
+            app:layout_constraintTop_toBottomOf="@id/tv_login"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="100dp"
+            android:textSize="30sp"/>
+        <TextView
+            android:id="@+id/tv_nice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="100dp"
+            android:text="최고다"
+            android:rotation="-10"
+            app:layout_constraintTop_toBottomOf="@id/tv_good"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="100dp"
             android:textSize="30sp"/>
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_login"
-            android:layout_width="wrap_content"
+            android:id="@+id/btn_sign_in"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_login"
-            android:text="로그인"
+            app:layout_constraintBottom_toTopOf="@id/btn_sign_up"
+            android:text="즉시 로그인"
+            android:fontFamily="@font/suite_boldextra"
+            android:textSize="20sp"
             android:onClick="@{() -> vm.onClickSignIn()}"
+            android:background="@drawable/button"
+            android:stateListAnimator="@null"
             />
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_signup"
-            android:layout_width="wrap_content"
+            android:id="@+id/btn_sign_up"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="50dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btn_login"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:fontFamily="@font/suite_boldextra"
+            android:textSize="20sp"
+            android:text="회원가입하기"
             android:onClick="@{() -> vm.onClickSignUp()}"
-            android:text="회원가입"
+            android:background="@drawable/button"
+            android:stateListAnimator="@null"
+
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
