--- a/presentation/src/main/res/layout/activity_on_main.xml
+++ b/presentation/src/main/res/layout/activity_on_main.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
             name="vm"
             type="com.example.carretmarket.features.onmain.MainViewModel" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
+        tools:context="com.example.carretmarket.features.onmain.MainActivity"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -17,11 +19,11 @@
             android:layout_height="0dp"
             app:layout_constraintBottom_toTopOf="@id/bottom_nav"
             app:layout_constraintTop_toTopOf="parent"
-            />
-<!--        app:defaultNavHost="true"-->
-        <!--        android:name="androidx.navigation.fragment.NavHostFragment"-->
-        <!--            app:navGraph="@navigation/nav_graph"-->
-<!--            />-->
+
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            app:navGraph="@navigation/nav_graph"
+            app:defaultNavHost="true" />
+
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_nav"
             app:menu="@menu/menu_bottom_nav"
