--- a/presentation/src/main/res/layout/fragment_board.xml
+++ b/presentation/src/main/res/layout/fragment_board.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="com.example.carretmarket.features.board.BoardFragment">
     <data>
         <variable
             name="vm"
@@ -31,6 +32,7 @@
             app:layout_constraintBottom_toBottomOf="@id/floating_btn2"
             android:layout_margin="16dp"
             android:contentDescription="post"
+            android:onClick="@{() -> vm.onClickPost()}"
             app:fabSize="mini"
             app:backgroundTint="@color/base1"
             app:rippleColor="#000"
