--- a/presentation/src/main/res/menu/menu_bottom_nav.xml
+++ b/presentation/src/main/res/menu/menu_bottom_nav.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/menu_home"
+        android:id="@+id/homeFragment"
         android:title=""
         android:icon="@drawable/ic_home"/>
     <item
-        android:id="@+id/menu_life"
+        android:id="@+id/boardFragment"
         android:title=""
-        android:icon="@drawable/ic_life"/>
+        android:icon="@drawable/ic_board"/>
     <item
-        android:id="@+id/menu_map"
+        android:id="@+id/mapFragment"
         android:title=""
         android:icon="@drawable/ic_point"/>
     <item
-        android:id="@+id/menu_chat"
+        android:id="@+id/chatFragment"
         android:title=""
         android:icon="@drawable/ic_chat"/>
     <item
-        android:id="@+id/menu_profile"
+        android:id="@+id/profileFragment"
         android:title=""
         android:icon="@drawable/ic_profile"/>
 </menu>
