--- a/presentation/src/main/res/layout/fragment_board.xml
+++ b/presentation/src/main/res/layout/fragment_board.xml
@@ -46,6 +46,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_margin="16dp"
             android:contentDescription="add"
+            android:onClick="@{() -> vm.onClickFloatingBar()}"
             app:backgroundTint="@color/base1"
             app:rippleColor="#000"
             app:srcCompat="@drawable/ic_add"
