--- a/presentation/src/main/res/navigation/nav_graph.xml
+++ b/presentation/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/signUpOrInFragment">
+    app:startDestination="@id/homeFragment">
     <fragment
         android:id="@+id/signUpOrInFragment"
         android:name="com.example.carretmarket.features.onboard.signuporin.SignUpOrInFragment"
